// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkDrawerContent should render correctly 1`] = `
<section
  aria-labelledby="bpk-drawer-heading-my-drawer"
  className="bpk-drawer bpk-drawer--entered"
  id="my-drawer"
  role="dialog"
  tabIndex="-1"
>
  <header
    className="bpk-drawer__header"
  >
    <h2
      className="bpk-drawer__heading"
      id="bpk-drawer-heading-my-drawer"
    >
      Drawer title
    </h2>
     
    <button
      aria-label="Close"
      className="bpk-close-button bpk-drawer__close-button"
      onClick={[MockFunction]}
      title="Close"
      type="button"
    >
      <svg
        className="bpk-close-button__icon"
        height="18"
        style={
          Object {
            "height": "1.125rem",
            "width": "1.125rem",
          }
        }
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.587 3.467a1.5 1.5 0 1 0-2.194 2.046q.036.038.074.074l6.438 6.44-6.44 6.44a1.5 1.5 0 0 0 2.122 2.12l6.44-6.438 6.44 6.44a1.5 1.5 0 0 0 2.12-2.122l-6.438-6.44 6.44-6.44a1.5 1.5 0 0 0-2.122-2.12l-6.44 6.438-6.44-6.44z"
        />
      </svg>
    </button>
  </header>
  <div
    className="bpk-drawer__content"
  >
    Drawer content
  </div>
</section>
`;

exports[`BpkDrawerContent should render correctly when it has a className 1`] = `
<section
  aria-labelledby="bpk-drawer-heading-my-drawer"
  className="bpk-drawer my-classname bpk-drawer--entered"
  id="my-drawer"
  role="dialog"
  tabIndex="-1"
>
  <header
    className="bpk-drawer__header"
  >
    <h2
      className="bpk-drawer__heading"
      id="bpk-drawer-heading-my-drawer"
    >
      Drawer title
    </h2>
     
    <button
      aria-label="Close"
      className="bpk-close-button bpk-drawer__close-button"
      onClick={[MockFunction]}
      title="Close"
      type="button"
    >
      <svg
        className="bpk-close-button__icon"
        height="18"
        style={
          Object {
            "height": "1.125rem",
            "width": "1.125rem",
          }
        }
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.587 3.467a1.5 1.5 0 1 0-2.194 2.046q.036.038.074.074l6.438 6.44-6.44 6.44a1.5 1.5 0 0 0 2.122 2.12l6.44-6.438 6.44 6.44a1.5 1.5 0 0 0 2.12-2.122l-6.438-6.44 6.44-6.44a1.5 1.5 0 0 0-2.122-2.12l-6.44 6.438-6.44-6.44z"
        />
      </svg>
    </button>
  </header>
  <div
    className="bpk-drawer__content"
  >
    Drawer content
  </div>
</section>
`;

exports[`BpkDrawerContent should render correctly when it has a contentClassName 1`] = `
<section
  aria-labelledby="bpk-drawer-heading-my-drawer"
  className="bpk-drawer bpk-drawer--entered"
  id="my-drawer"
  role="dialog"
  tabIndex="-1"
>
  <header
    className="bpk-drawer__header"
  >
    <h2
      className="bpk-drawer__heading"
      id="bpk-drawer-heading-my-drawer"
    >
      Drawer title
    </h2>
     
    <button
      aria-label="Close"
      className="bpk-close-button bpk-drawer__close-button"
      onClick={[MockFunction]}
      title="Close"
      type="button"
    >
      <svg
        className="bpk-close-button__icon"
        height="18"
        style={
          Object {
            "height": "1.125rem",
            "width": "1.125rem",
          }
        }
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.587 3.467a1.5 1.5 0 1 0-2.194 2.046q.036.038.074.074l6.438 6.44-6.44 6.44a1.5 1.5 0 0 0 2.122 2.12l6.44-6.438 6.44 6.44a1.5 1.5 0 0 0 2.12-2.122l-6.438-6.44 6.44-6.44a1.5 1.5 0 0 0-2.122-2.12l-6.44 6.438-6.44-6.44z"
        />
      </svg>
    </button>
  </header>
  <div
    className="bpk-drawer__content my-classname"
  >
    Drawer content
  </div>
</section>
`;

exports[`BpkDrawerContent should render correctly with arbitrary attributes 1`] = `
<section
  aria-labelledby="bpk-drawer-heading-my-drawer"
  className="bpk-drawer bpk-drawer--entered"
  data-arbitrary="prop"
  id="my-drawer"
  role="dialog"
  tabIndex="-1"
>
  <header
    className="bpk-drawer__header"
  >
    <h2
      className="bpk-drawer__heading"
      id="bpk-drawer-heading-my-drawer"
    >
      Drawer title
    </h2>
     
    <button
      aria-label="Close"
      className="bpk-close-button bpk-drawer__close-button"
      onClick={[MockFunction]}
      title="Close"
      type="button"
    >
      <svg
        className="bpk-close-button__icon"
        height="18"
        style={
          Object {
            "height": "1.125rem",
            "width": "1.125rem",
          }
        }
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.587 3.467a1.5 1.5 0 1 0-2.194 2.046q.036.038.074.074l6.438 6.44-6.44 6.44a1.5 1.5 0 0 0 2.122 2.12l6.44-6.438 6.44 6.44a1.5 1.5 0 0 0 2.12-2.122l-6.438-6.44 6.44-6.44a1.5 1.5 0 0 0-2.122-2.12l-6.44 6.438-6.44-6.44z"
        />
      </svg>
    </button>
  </header>
  <div
    className="bpk-drawer__content"
  >
    Drawer content
  </div>
</section>
`;

exports[`BpkDrawerContent should render correctly with hideTitle 1`] = `
<section
  aria-labelledby="bpk-drawer-heading-my-drawer"
  className="bpk-drawer bpk-drawer--entered"
  id="my-drawer"
  role="dialog"
  tabIndex="-1"
>
  <header
    className="bpk-drawer__header"
  >
    <h2
      className="bpk-drawer__heading bpk-drawer__heading--visually-hidden"
      id="bpk-drawer-heading-my-drawer"
    >
      Drawer title
    </h2>
     
    <button
      aria-label="Close"
      className="bpk-close-button bpk-drawer__close-button"
      onClick={[MockFunction]}
      title="Close"
      type="button"
    >
      <svg
        className="bpk-close-button__icon"
        height="18"
        style={
          Object {
            "height": "1.125rem",
            "width": "1.125rem",
          }
        }
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.587 3.467a1.5 1.5 0 1 0-2.194 2.046q.036.038.074.074l6.438 6.44-6.44 6.44a1.5 1.5 0 0 0 2.122 2.12l6.44-6.438 6.44 6.44a1.5 1.5 0 0 0 2.12-2.122l-6.438-6.44 6.44-6.44a1.5 1.5 0 0 0-2.122-2.12l-6.44 6.438-6.44-6.44z"
        />
      </svg>
    </button>
  </header>
  <div
    className="bpk-drawer__content"
  >
    Drawer content
  </div>
</section>
`;
